04/25/25 12:45: impelemented pc health display
04/25/25 1:20: light implemented
